--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,5 +31,5 @@ if(APPLE)
     target_link_libraries(JUB_test PRIVATE  "-framework JubSDK" "-framework CoreFoundation" "-framework IOKit")
 else()
     #其他平台链接静态库
-    target_link_libraries(JUB_test PRIVATE JubSDK TrezorCrypto ${HID_API_LIB_STATIC})  
+    target_link_libraries(JUB_test PRIVATE JubSDK TrezorCrypto libprotobuf ${HID_API_LIB_STATIC})  
 endif(APPLE)
