--- a/trezor-crypto/CMakeLists.txt
+++ b/trezor-crypto/CMakeLists.txt
@@ -52,6 +52,7 @@ target_compile_options(TrezorCrypto
         -Wformat-security
         -Werror
         -Wno-shorten-64-to-32
+        -Wno-char-subscripts
 )
 
 target_include_directories(TrezorCrypto
