--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.0.0)
 project(JubSDK VERSION 0.1.0)
 
 set (CMAKE_CXX_STANDARD 11)
-SET(CMAKE_BUILD_TYPE "Debug")
+set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/./outputs/${CMAKE_SYSTEM_NAME})
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/./outputs/${CMAKE_SYSTEM_NAME})
+set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/./install/${CMAKE_SYSTEM_NAME})
 
 if(devOnly)
 else()  #if(devOnly)
