--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "deps/ios-cmake"]
 	path = deps/ios-cmake
 	url = https://github.com/leetal/ios-cmake.git
+[submodule "uint256_t"]
+	path = uint256_t
+	url = https://github.com/calccrypto/uint256_t.git
