modify make install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,12 @@ cmake_minimum_required(VERSION 3.0.0)
 project(JubSDK VERSION 0.1.0)
 
 set (CMAKE_CXX_STANDARD 11)
-SET(CMAKE_BUILD_TYPE "Debug")
+#SET(CMAKE_BUILD_TYPE "Debug")
 
 #将编译出的文件统一放在一处，方便后面查找目录
 set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/./outputs/${CMAKE_SYSTEM_NAME})
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/./outputs/${CMAKE_SYSTEM_NAME})
+set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/./install)
 
 if(APPLE)
 #打成framework之后，即使在一个工程里面，链接时也会找不到，需要手动指定查找目录
@@ -33,4 +34,3 @@ if(NOT ANDROID AND NOT IOS)
 add_subdirectory(test)
 endif() #if(NOT ANDROID AND NOT IOS)
 endif() #if(devOnly)
-#add_subdirectory(monitor)
