not copy include files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,23 +103,23 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../gpc/include)
 
 endif() #if(devOnly)
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../include DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
+#file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../include DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
 # 把需要打包的头文件加进工程,方便打包BLE和NFC暂时先加进来，应该没有影响
 set(HEADERS
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_CORE.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_BTC.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_COMM.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_DEV_BIO.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_DEV_BLE.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_DEV_HID.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_DEV_NFC.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_DEV.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_EOS.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_ETH.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_Hcash.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_XRP.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK_TRX.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/JUB_SDK.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_CORE.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_BTC.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_COMM.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_DEV_BIO.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_DEV_BLE.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_DEV_HID.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_DEV_NFC.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_DEV.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_EOS.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_ETH.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_Hcash.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_XRP.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK_TRX.h
+${CMAKE_CURRENT_SOURCE_DIR}/../include/JUB_SDK.h
 )
 
 ADD_LIBRARY(JUB_SDK STATIC ${SRC_LIST})
